tests/parse-fail/bad_module.fl.0.exp
Error: bad_module.fl(1,9): Expected identifier, but found: {
pub mod {
        ^ 
}

